--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,14 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "React Native",
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es2020",
     "module": "commonjs",
-    "lib": ["es2017"],
-    "allowJs": true,
-    "jsx": "react-native",
+    "lib": ["es2020"],
+    "outDir": "dist",
     "noEmit": true,
-    "isolatedModules": true,
     "strict": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
-  },
-  "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js",
-    "dist"
-  ]
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  }
 }
